atualização de e-mail

--- a/views/member.handlebars
+++ b/views/member.handlebars
@@ -45,7 +45,16 @@
  	  <div class="container">
       {{msg}}
  	    <form action="sendMail" class="row" method="POST">
+
  	      <div class="col col-desktop-6 col-6">
+           
+        <!-- abrir um combo para selecionar o assunto
+
+          <div class="input-control">
+            <input id="assunto" name="assunto" type="text" required placeholder="Assunto...">
+            <label for="Assunto">Assunto*</label>
+          </div>  -->
+
           <div class="input-control">
             <input id="nome" name="nome" type="text" required placeholder="Nome...">
             <label for="nome">Nome*</label>
